fix title spacing

--- a/themes/clean-blog-horace-unstable/source/css/base.styl
+++ b/themes/clean-blog-horace-unstable/source/css/base.styl
@@ -185,6 +185,7 @@ hr.small
 .post-preview
   > a
     color gray-dark
+    word-spacing -0.15em
     &:hover, &:focus
       text-decoration none
       color brand-primary
